# BTLBigData

./: .env.example  .gitignore  PLAN.md  README.md  analysis_output.txt  analyze_data.py  clear_data.py  docker-compose.yml  main.ipynb  main.py  producer.py  pyproject.toml  spark_consumer.py  water_quality_analysis.md  wqi_consumer.py
