[project]
name = "btlbigdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "kafka-python>=2.3.0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "pyspark>=4.1.1",
]
